update copyright, fix line spacing for lists

--- a/site.scss
+++ b/site.scss
@@ -75,7 +75,7 @@ html {
 	font-family: Verdana, sans-serif;
 }
 
-p {
+p,ul {
 	line-height: 1.75;
 }
 
